force-app/main/default/objects/Customer_Readiness_Form__c/Customer_Readiness_Form__c.object-meta.xml
<CustomObject>
    <description>Stores specific information on customer location during the Instrument sales cycle so Sales team can share information with Service team. Information such BSA level, application use, data storage options, desired shipment or install timelines etc.</description>
    <label>Customer Readiness Form</label>
    <nameField>
        <displayFormat>CRF-{0000}-{MM}{DD}{YYYY}</displayFormat>
        <label>Customer Readiness Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Readiness Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>