force-app/main/default/objects/Customer_Readiness_Form__c/fields/Application_Will_Be_Microarray__c.field-meta.xml
<CustomField>
    <fullName>Application_Will_Be_Microarray__c</fullName>
    <description>Field to check if Application Will Be Microarray.</description>
    <defaultValue>false</defaultValue>
    <label>Application Will Be Microarray</label>
    <type>Checkbox</type>
</CustomField>