force-app/main/default/objects/Customer_Readiness_Form__c/fields/Clinical_Type__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Type__c</fullName>
    <description>Formula Field to store Clinical Type of ultimate consignee.</description>
    <formula>TEXT(Opportunity_Name__r.Ultimate_Consignee__r.Clinical_Type__c)</formula>
    <label>Clinical Type</label>
    <type>Text</type>
</CustomField>