force-app/main/default/objects/Customer_Readiness_Form__c/fields/Is_Security_Clearance_Needed__c.field-meta.xml
<CustomField>
    <fullName>Is_Security_Clearance_Needed__c</fullName>
    <description>Indicates if Illumina personnel will need security clearance to access lab where product will be installed.</description>
    <inlineHelpText>Indicates if Illumina personnel will need security clearance to access lab where product will be installed.</inlineHelpText>
    <label>Is Security Clearance Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>