force-app/main/default/objects/Customer_Readiness_Form__c/fields/Legacy_SFDC_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_SFDC_Record_Id__c</fullName>
    <description>Field to store Legacy SFDC Record Id.</description>
    <externalId>true</externalId>
    <label>Legacy SFDC Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>