force-app/main/default/objects/Customer_Readiness_Form__c/fields/Market_Segment__c.field-meta.xml
<CustomField>
    <fullName>Market_Segment__c</fullName>
    <description>Formula Field to store Market Segment of the ultimate consignee.</description>
    <formula>TEXT( Opportunity_Name__r.Ultimate_Consignee__r.Market_Segment__c )</formula>
    <label>Market Segment</label>
    <type>Text</type>
</CustomField>