force-app/main/default/objects/Customer_Readiness_Form__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>Lookup to Opportunity.</description>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Readiness Forms</relationshipLabel>
    <relationshipName>Customer_Readiness_Form</relationshipName>
    <type>Lookup</type>
</CustomField>