force-app/main/default/objects/Customer_Readiness_Form__c/fields/SFT_Account__c.field-meta.xml
<CustomField>
    <fullName>SFT_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>OOTB SFDC field</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Readiness Forms</relationshipLabel>
    <relationshipName>Customer_Readiness_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>