force-app/main/default/objects/Customer_Readiness_Form__c/fields/SFT_Deployment__c.field-meta.xml
<CustomField>
    <fullName>SFT_Deployment__c</fullName>
    <description>Onsite, or Hosted</description>
    <label>Deployment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hosted</fullName>
            </value>
            <value>
                <fullName>On-Premise (Hardware)</fullName>
            </value>
            <value>
                <fullName>On-Premise (Cloud)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>