force-app/main/default/objects/Customer_Readiness_Form__c/fields/SFT_LIMS_In_Production_On__c.field-meta.xml
<CustomField>
    <fullName>SFT_LIMS_In_Production_On__c</fullName>
    <description>The Date LIMS went into Production with live samples. Signifies Implementation is over</description>
    <label>LIMS In Production On</label>
    <type>Date</type>
</CustomField>