force-app/main/default/objects/Customer_Readiness_Form__c/fields/SFT_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>SFT_Opportunity__c</fullName>
    <description>Lookup to Opportunity.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Readiness Forms (Opportunity)</relationshipLabel>
    <relationshipName>Customer_Readiness_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>