force-app/main/default/objects/Customer_Readiness_Form__c/fields/SFT_Remote_Training_3__c.field-meta.xml
<CustomField>
    <fullName>SFT_Remote_Training_3__c</fullName>
    <description>Date documenting when third training occurred</description>
    <label>Remote Training #3</label>
    <type>Date</type>
</CustomField>