force-app/main/default/objects/Customer_Readiness_Form__c/fields/SFT_Sales_Lead__c.field-meta.xml
<CustomField>
    <fullName>SFT_Sales_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Informatics Sales Person</description>
    <label>Sales Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Customer Readiness Forms (Sales Lead)</relationshipLabel>
    <relationshipName>Customer_Readiness_Forms1</relationshipName>
    <type>Lookup</type>
</CustomField>