force-app/main/default/objects/Customer_Readiness_Form__c/fields/Ultimate_Consignee__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Consignee__c</fullName>
    <description>Formula field to store ultimate consignee from opportunity.</description>
    <formula>Opportunity_Name__r.Ultimate_Consignee__r.Name</formula>
    <label>Ultimate Consignee</label>
    <type>Text</type>
</CustomField>