force-app/main/default/objects/Customer_Readiness_Form__c/fields/Will_Use_BaseSpace_For_Data__c.field-meta.xml
<CustomField>
    <fullName>Will_Use_BaseSpace_For_Data__c</fullName>
    <description>Field to check if Application Will Use BaseSpace For Data.</description>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if customer will be using BaseSpace for data once product is installed.</inlineHelpText>
    <label>Will Use BaseSpace For Data</label>
    <type>Checkbox</type>
</CustomField>