force-app/main/default/objects/Customer_Readiness_Form__c/fields/Will_Use_Local_Linux_Server_For_Data__c.field-meta.xml
<CustomField>
    <fullName>Will_Use_Local_Linux_Server_For_Data__c</fullName>
    <description>Field to check if Application Will Use Local/Linux Server For Data.</description>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if customer will be using a local/Linux server for data once product is installed.</inlineHelpText>
    <label>Will Use Local/Linux Server For Data</label>
    <type>Checkbox</type>
</CustomField>