force-app/main/default/objects/Customer_Readiness_Form__c/recordTypes/Instrument.recordType-meta.xml
<RecordType>
    <fullName>Instrument</fullName>
    <active>true</active>
    <label>Instrument</label>
</RecordType>