force-app/main/default/objects/Customer_Readiness_Form__c/validationRules/CheckInstrumentCRFSection2IsPopulated.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckInstrumentCRFSection2IsPopulated</fullName>
    <active>true</active>
    <description>Prevent CRF Section 2 change after Prove Stage of Opportunity.</description>
    <errorConditionFormula>IF ( 
    AND (
        TEXT ( Opportunity_Name__r.StageName ) &lt;&gt; $Label.OpportunityStageCreate, 
        TEXT ( Opportunity_Name__r.StageName ) &lt;&gt; $Label.OpportunityStageQualify,
        TEXT ( Opportunity_Name__r.StageName ) &lt;&gt; $Label.OpportunityStageDevelop,
        TEXT ( Opportunity_Name__r.StageName ) &lt;&gt; $Label.OpportunityStageProve,
        RecordType.DeveloperName = $Label.CRFRecordTypeInstrument,
        Opportunity_Name__r.RecordType.DeveloperName = $Label.OpportunityRTDirectStandard
    ),
    OR (
        ISBLANK (  Desired_Shipment_or_Install_Timelines__c  ),
        NOT (  Has_Support_team_Scheduled_Site_Review__c )
    ),
false
)</errorConditionFormula>
    <errorMessage>Respective CRF Section 2 field value(s) must be populated in current opportunity stage.</errorMessage>
</ValidationRule>