force-app/main/default/objects/Customer_Readiness_Form__c/validationRules/CheckInstrumentCRFSection3IsPopulated.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckInstrumentCRFSection3IsPopulated</fullName>
    <active>true</active>
    <description>Prevent CRF Section 3 change after Negotiate &amp; Resolve Stage of Opportunity.</description>
    <errorConditionFormula>IF ( 
    AND (
        TEXT ( Opportunity_Name__r.StageName ) &lt;&gt; $Label.OpportunityStageCreate, 
        TEXT ( Opportunity_Name__r.StageName ) &lt;&gt; $Label.OpportunityStageQualify,
        TEXT ( Opportunity_Name__r.StageName ) &lt;&gt; $Label.OpportunityStageDevelop,
        TEXT ( Opportunity_Name__r.StageName ) &lt;&gt; $Label.OpportunityStageProve,
        TEXT ( Opportunity_Name__r.StageName ) &lt;&gt; $Label.OpportunityStageNegotiateResolve,
        RecordType.DeveloperName = $Label.CRFRecordTypeInstrument,
        Opportunity_Name__r.RecordType.DeveloperName = $Label.OpportunityRTDirectStandard
    ),
    OR (
        ISBLANK ( TEXT (  Is_Lab_Space_NVSQ_Or_Bench_Available__c ) ), 
        ISBLANK ( TEXT (  Customer_Desired_Time_To_Full_Production__c ) ) 
    ),
false
)</errorConditionFormula>
    <errorMessage>Respective CRF Section 3 field value(s) must be populated in current opportunity stage.</errorMessage>
</ValidationRule>