force-app/main/default/objects/Customer_Readiness_Form__c/validationRules/CheckInstrumentPurchaseTimelinesNotNull.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckInstrumentPurchaseTimelinesNotNull</fullName>
    <active>true</active>
    <description>Desired Shipment/Install Timelines field value must be populated in current opportunity stage.</description>
    <errorConditionFormula>AND (
    TEXT ( Opportunity_Name__r.StageName ) &lt;&gt; $Label.OpportunityStageCreate, 
    TEXT ( Opportunity_Name__r.StageName ) &lt;&gt; $Label.OpportunityStageQualify,
    TEXT ( Opportunity_Name__r.StageName ) &lt;&gt; $Label.OpportunityStageDevelop,
    TEXT ( Opportunity_Name__r.StageName ) &lt;&gt; $Label.OpportunityStageProve,
    RecordType.DeveloperName = $Label.CRFRecordTypeInstrument,
    Opportunity_Name__r.RecordType.DeveloperName = $Label.OpportunityRTIndirectStandard,
    CONTAINS ( Opportunity_Name__r.Product_Type__c , $Label.OpportunityProdTypeInstrument ),
    ISBLANK (  Desired_Shipment_or_Install_Timelines__c  )
)</errorConditionFormula>
    <errorMessage>Desired Shipment/Install Timelines field value must be populated in current opportunity stage.</errorMessage>
</ValidationRule>