force-app/main/default/objects/Customer_Readiness_Form__c/validationRules/CheckInstrumentSoldToAcctIsNotBlock.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckInstrumentSoldToAcctIsNotBlock</fullName>
    <active>true</active>
    <description>Validation rule to check if the Sold to Account&apos;s status of related Opportunity for the CRF is one of the blocked status(rejected,obsolete etc) then no edit and created is allowed.</description>
    <errorConditionFormula>AND(
    OR (
        TEXT ( Opportunity_Name__r.Account.Account_Status__c ) = $Label.AccountStatusObsolete,
        TEXT ( Opportunity_Name__r.Account.Account_Status__c ) = $Label.AccountStatusPendingObsolete
    ),
    RecordType.DeveloperName = $Label.CRFRecordTypeInstrument  
)</errorConditionFormula>
    <errorMessage>Sold-To account has been marked for deletion. You cannot create, edit, or progress an Opportunity or any related object tied to this account. Please reach out to appropriate team for more information.</errorMessage>
</ValidationRule>