force-app/main/default/objects/Customer_Readiness_Form__c/validationRules/CheckInstrumentUltimConsigneeAccNotBlock.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckInstrumentUltimConsigneeAccNotBlock</fullName>
    <active>true</active>
    <description>Validation rule to check if the Ultimate Consigness&apos;s status of related Opportunity for the CRF is one of the blocked status(rejected,obsolete etc) then no edit and created is allowed.</description>
    <errorConditionFormula>AND (
    NOT ( 
        ISBLANK ( Opportunity_Name__r.Ultimate_Consignee__c)
    ),
    RecordType.DeveloperName = $Label.CRFRecordTypeInstrument,
    OR (
        TEXT ( Opportunity_Name__r.Ultimate_Consignee__r.Account_Status__c ) = $Label.AccountStatusObsolete, 
        TEXT ( Opportunity_Name__r.Ultimate_Consignee__r.Account_Status__c ) = $Label.AccountStatusPendingObsolete
    )
)</errorConditionFormula>
    <errorMessage>Ultimate Consignee account has been marked for deletion. You cannot create, edit, or progress an Opportunity or any related object tied to this account. Please reach out to appropriate team for more information.</errorMessage>
</ValidationRule>