force-app/main/default/objects/Customer_Readiness_Form__c/listViews/Current_Month_CRFs.listView-meta.xml
<ListView>
    <fullName>Current_Month_CRFs</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Desired_Shipment_or_Install_Timelines__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Current Month CRFs</label>
</ListView>