force-app/main/default/objects/Customer_Readiness_Form__c/listViews/Indirect_Completed_CRFs.listView-meta.xml
<ListView>
    <fullName>Indirect_Completed_CRFs</fullName>
    <columns>NAME</columns>
    <columns>Opportunity_Name__c</columns>
    <columns>Desired_Shipment_or_Install_Timelines__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Desired_Shipment_or_Install_Timelines__c</field>
        <operation>notEqual</operation>
        <value>NULL</value>
    </filters>
    <label>Indirect Completed CRFs</label>
</ListView>